# connection-dynamics

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: combined-model.json  demo-reference.json  results.json
demo/: app.py
docs/: ANNOTATION_PROTOCOL.md  DATA_CARD.md  IMPLEMENTATION_STATUS.md  LEAKAGE_AUDIT.md  QUESTIONNAIRE.md
src/connection_dynamics/: __init__.py  annotation.py  cli.py  corpus.py  demo.py  graph.py  modeling.py  panel.py
tests/: test_annotation.py  test_demo.py  test_graph.py  test_panel.py  test_streamlit_app.py
