[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "connection-dynamics"
version = "0.1.0"
description = "Leakage-safe modeling of durable online dyadic interaction"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Triet Pham"}]
dependencies = []

[project.optional-dependencies]
model = [
  "gensim>=4.3",
  "matplotlib>=3.9",
  "networkx>=3.4",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=17",
  "scikit-learn>=1.5",
  "sentence-transformers>=3.0",
  "shap>=0.46",
  "xgboost>=2.1",
]
annotate = ["openai>=1.99", "pydantic>=2.8"]
spark = ["pyspark>=3.5"]
dev = ["pytest>=8.3", "ruff>=0.7"]

[project.scripts]
connection-dynamics = "connection_dynamics.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/connection_dynamics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".deps", ".venv", "data", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
